--- a/About.html
+++ b/About.html
@@ -7,7 +7,7 @@
         content="Learn about Sree Rajesh Caterers and our 25-year journey of serving authentic, high-quality food for weddings and events in Hyderabad. Read our story and values.">
     <meta name="keywords"
         content="About Sree Rajesh Caterers, Catering History Hyderabad, Best Caterers Profile, Catering Team, Hyderabad Caterers">
-    <link rel="canonical" href="About.html">
+    <link rel="canonical" href="about.html">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Sree Rajesh Caterers | About Us">
@@ -15,7 +15,7 @@
         content="25+ Years of Excellence in Catering. Discover our passion for food and service.">
     <meta property="og:image" content="rajeshimedia/logo.png">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="About.html">
+    <meta property="og:url" content="about.html">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,7 +26,7 @@
     <link rel="stylesheet" type="text/css" href="css/4fTQ3m0AiaJ9.css">
     <link rel="stylesheet" type="text/css" href="css/a4uDToAOB0JO.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
-    <link rel="shortcut icon" href="rajeshimedia/logo.png">
+    <link rel="shortcut icon" href="rajeshimedia/favicon.png">
     <link rel="stylesheet" href="css/style.css">
 
     <link rel="stylesheet" href="css/about-custom.css">
@@ -80,19 +80,19 @@
                                         <a href="index.html">Home</a>
                                     </li>
 
-                                    <li class="active"><a href="About.html">About</a></li>
+                                    <li class="active"><a href="about.html">About</a></li>
 
                                     <li class="dropdown">
                                         <a data-toggle="dropdown" href="#" class="dropdown-toggle">Menu</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="Veg.html">Veg</a></li>
-                                            <li><a href="Non-Veg.html">Non Veg</a></li>
+                                            <li><a href="veg.html">Veg</a></li>
+                                            <li><a href="non-veg.html">Non Veg</a></li>
                                         </ul>
                                     </li>
 
-                                    <li><a href="Gallery.html">Gallery</a></li>
+                                    <li><a href="gallery.html">Gallery</a></li>
 
-                                    <li><a href="Contact.html">Contact Us</a></li>
+                                    <li><a href="contact.html">Contact Us</a></li>
 
                                 </ul>
                             </div>
@@ -258,7 +258,7 @@
             height: 65px;
             line-height: 65px;
             border-radius: 50%;
-            background: #c58723;
+            background: #e25111;
             color: #fff;
         }
 
@@ -275,7 +275,7 @@
         }
 
         .grids-content h5 a:hover {
-            color: #f50537;
+            color: #e25111;
             text-decoration: none;
         }
 
@@ -780,7 +780,7 @@
         }
 
         .testimonial i.fas.fa-quote-right {
-            color: #f50537;
+            color: #e25111;
             font-size: 60px;
             margin-bottom: 20px;
             display: block;
@@ -860,13 +860,6 @@
             padding-bottom: 3rem !important;
         }
 
-        .footer-top-16 {
-            background-color: #c58723;
-        }
-
-        .copy-section {
-            background-color: #c58723;
-        }
 
         .w3l-footer-16 h3 {
             font-size: 25px;
@@ -1011,7 +1004,7 @@
             cursor: pointer;
             width: 18%;
             color: #fff;
-            background: #f50537;
+            background: #e25111;
             border-radius: 0 30px 30px 0;
         }
 
@@ -1320,10 +1313,10 @@
                         <h3>Quick Link</h3>
                         <ul class="footer-gd-16">
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="About.html">About Us</a></li>
-                            <li><a href="Veg.html">Menu</a></li>
-                            <li><a href="Gallery.html">Gallery</a></li>
-                            <li><a href="Contact.html">Contact Us</a></li>
+                            <li><a href="about.html">About Us</a></li>
+                            <li><a href="veg.html">Menu</a></li>
+                            <li><a href="gallery.html">Gallery</a></li>
+                            <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </div>
 
