--- a/Gallery.html
+++ b/Gallery.html
@@ -7,7 +7,7 @@
         content="Explore our gallery of catering events. Photos of our delicious food setups, wedding catering, and happy clients in Hyderabad & Secunderabad.">
     <meta name="keywords"
         content="Catering Gallery, Food Photos, Wedding Catering Images, Sree Rajesh Caterers Gallery, Event Photos">
-    <link rel="canonical" href="Gallery.html">
+    <link rel="canonical" href="gallery.html">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Catering Gallery | Sree Rajesh Caterers">
@@ -15,7 +15,7 @@
         content="View our portfolio of successful catering events and mouth-watering dishes.">
     <meta property="og:image" content="rajeshimedia/logo.png">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="Gallery.html">
+    <meta property="og:url" content="gallery.html">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,7 +26,7 @@
     <link rel="stylesheet" type="text/css" href="css/4fTQ3m0AiaJ9.css">
     <link rel="stylesheet" type="text/css" href="css/a4uDToAOB0JO.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
-    <link rel="shortcut icon" href="rajeshimedia/logo.png">
+    <link rel="shortcut icon" href="rajeshimedia/favicon.png">
     <link rel="stylesheet" href="css/style.css">
 
 
@@ -238,7 +238,7 @@
             height: 65px;
             line-height: 65px;
             border-radius: 50%;
-            background: #f5cc35;
+            background: #e25111;
             color: #fff;
         }
 
@@ -255,7 +255,7 @@
         }
 
         .grids-content h5 a:hover {
-            color: #f50537;
+            color: #e25111;
             text-decoration: none;
         }
 
@@ -773,7 +773,7 @@
         }
 
         .testimonial i.fas.fa-quote-right {
-            color: #f50537;
+            color: #e25111;
             font-size: 60px;
             margin-bottom: 20px;
             display: block;
@@ -854,11 +854,11 @@
         }
 
         .footer-top-16 {
-            background-color: #f5cc35;
+            background-color: #e25111;
         }
 
         .copy-section {
-            background-color: #f5cc35;
+            background-color: #e25111;
         }
 
         .w3l-footer-16 input[type="email"] {
@@ -880,7 +880,7 @@
             cursor: pointer;
             width: 18%;
             color: #fff;
-            background: #f50537;
+            background: #e25111;
             border-radius: 0 30px 30px 0;
         }
 
@@ -978,19 +978,19 @@
                                         <a href="index.html">Home</a>
                                     </li>
 
-                                    <li><a href="About.html">About</a></li>
+                                    <li><a href="about.html">About</a></li>
 
                                     <li class="dropdown">
                                         <a data-toggle="dropdown" href="#" class="dropdown-toggle">Menu</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="Veg.html">Veg</a></li>
-                                            <li><a href="Non-Veg.html">Non Veg</a></li>
+                                            <li><a href="veg.html">Veg</a></li>
+                                            <li><a href="non-veg.html">Non Veg</a></li>
                                         </ul>
                                     </li>
 
-                                    <li class="active"><a href="Gallery.html">Gallery</a></li>
+                                    <li class="active"><a href="gallery.html">Gallery</a></li>
 
-                                    <li><a href="Contact.html">Contact Us</a></li>
+                                    <li><a href="contact.html">Contact Us</a></li>
 
                                 </ul>
                             </div>
@@ -1268,10 +1268,10 @@
                         <h3>Quick Link</h3>
                         <ul class="footer-gd-16">
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="About.html">About Us</a></li>
-                            <li><a href="Veg.html">Menu</a></li>
-                            <li><a href="Gallery.html">Gallery</a></li>
-                            <li><a href="Contact.html">Contact Us</a></li>
+                            <li><a href="about.html">About Us</a></li>
+                            <li><a href="veg.html">Menu</a></li>
+                            <li><a href="gallery.html">Gallery</a></li>
+                            <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </div>
 
