--- a/Non-Veg.html
+++ b/Non-Veg.html
@@ -7,14 +7,14 @@
         content="Discover our mouth-watering Non-Veg Menu featuring authentic Hyderabad Biryani, Curries, and Starters. Perfect for weddings and grand celebrations in Hyderabad.">
     <meta name="keywords"
         content="Non-Veg Catering Menu, Chicken Biryani Catering, Mutton Biryani, Hyderabad Non-Veg Caterers, Wedding Feast">
-    <link rel="canonical" href="Non-Veg.html">
+    <link rel="canonical" href="non-veg.html">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Non-Veg Catering Menu | Sree Rajesh Caterers">
     <meta property="og:description" content="Authentic Non-Vegetarian Catering. Biryani, Curries, and more.">
     <meta property="og:image" content="rajeshimedia/logo.png">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="Non-Veg.html">
+    <meta property="og:url" content="non-veg.html">
     <meta charset="utf-8" />
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -23,7 +23,7 @@
     <link rel="stylesheet" type="text/css" href="css/4fTQ3m0AiaJ9.css">
     <link rel="stylesheet" type="text/css" href="css/a4uDToAOB0JO.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
-    <link rel="shortcut icon" href="rajeshimedia/logo.png">
+    <link rel="shortcut icon" href="rajeshimedia/favicon.png">
     <link rel="stylesheet" href="css/style.css">
     <style>
         .logo-image {
@@ -97,13 +97,38 @@
 
         .grids_info i {
             font-size: 28px;
-            background: #f5cc35;
+            background: #e25111;
             color: #fff;
             width: 60px;
             height: 60px;
             border-radius: 50%;
             line-height: 60px;
             text-align: center;
+        }
+
+        .section-title {
+            padding-bottom: 40px;
+        }
+
+        .section-title h2 {
+            font-size: 20px;
+            font-weight: 600;
+            padding: 0;
+            line-height: 1px;
+            margin: 0 0 15px 0;
+            letter-spacing: 2px;
+            text-transform: uppercase;
+            color: black;
+            font-family: "Poppins", sans-serif;
+        }
+
+        .section-title p {
+            margin: 0;
+            margin: 0;
+            font-size: 36px;
+            font-weight: 700;
+            font-family: "Playfair Display", serif;
+            color: #e25111;
         }
 
         .ps-xl-5 {
@@ -131,7 +156,7 @@
         }
 
         #page_header {
-            background: url(rajeshimedia/nonvegbrand.png) no-repeat;
+            background: url("rajeshimedia/nonveg-banner.jpg") no-repeat;
             width: 100%;
             position: relative;
             min-height: 315px;
@@ -200,7 +225,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="About.html">
+                                        <a href="about.html">
                                             About
                                         </a>
                                     </li>
@@ -210,24 +235,24 @@
                                         </a>
                                         <ul class="dropdown-menu">
                                             <li>
-                                                <a href="Veg.html">
+                                                <a href="veg.html">
                                                     Veg
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="Non-Veg.html">
+                                                <a href="non-veg.html">
                                                     Non Veg
                                                 </a>
                                             </li>
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="Gallery.html">
+                                        <a href="gallery.html">
                                             Gallery
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="Contact.html">
+                                        <a href="contact.html">
                                             Contact Us
                                         </a>
                                     </li>
@@ -254,13 +279,25 @@
             </div>
         </div>
     </section>
+
+
+
+    <style>
+
+    </style>
     <!-- ======= Menu Section ======= -->
     <section class="service py-5" id="detailed-menu" style="background-color: #f8f9fa;">
         <div class="container py-md-4 py-3">
-            <div class="text-center mb-5" data-aos="fade-up">
-                <h2 class="title-style mb-2" style="color: #000; font-weight: bold; font-size: 30px;">
-                    Non Veg Catering Services Miyapur, Hyderabad
+            <div class="section-title">
+                <h2>
+                    Non veg Catering
                 </h2>
+                <p>
+                    Non Veg Catering Services Miyapur, Hyderabad
+                </p>
+            </div>
+            <div class=" mb-5" data-aos="fade-up">
+
                 <p class="mt-4" style="font-size: 18px; color: #333; line-height: 1.6;">
                     If you are craving mouthwatering non-vegetarian dishes for your event in Miyapur, look no further
                     than Sree Rajesh Caterers for Non-Veg Catering Services in Miyapur, Hyderabad. They specialize in
@@ -1108,22 +1145,22 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="About.html">
+                                <a href="about.html">
                                     About Us
                                 </a>
                             </li>
                             <li>
-                                <a href="Veg.html">
+                                <a href="veg.html">
                                     Menu
                                 </a>
                             </li>
                             <li>
-                                <a href="Gallery.html">
+                                <a href="gallery.html">
                                     Gallery
                                 </a>
                             </li>
                             <li>
-                                <a href="Contact.html">
+                                <a href="contact.html">
                                     Contact Us
                                 </a>
                             </li>
