--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" type="text/css" href="css/4fTQ3m0AiaJ9.css">
   <link rel="stylesheet" type="text/css" href="css/a4uDToAOB0JO.css">
   <link rel="stylesheet" type="text/css" href="css/footer.css">
-  <link rel="shortcut icon" href="rajeshimedia/logo.png">
+  <link rel="shortcut icon" href="rajeshimedia/favicon.png">
   <link rel="stylesheet" href="css/style.css">
   <style>
     .logo-image {
@@ -64,7 +64,7 @@
 
     .grids_info i {
       font-size: 28px;
-      background: #f5cc35;
+      background: #e25111;
       color: #fff;
       width: 60px;
       height: 60px;
@@ -75,7 +75,7 @@
 
     .feature i {
       font-size: 28px;
-      background: #f5cc35;
+      background: #e25111;
       color: #fff;
       width: 70px;
       height: 70px;
@@ -85,7 +85,7 @@
       margin-bottom: 20px;
       display: inline-block;
       border: 3px solid #fff;
-      box-shadow: 0 0 0 1px #f5cc35;
+      box-shadow: 0 0 0 1px #e25111;
     }
 
     .fa-utensils:before {
@@ -180,7 +180,7 @@
       text-align: center;
       font-size: 30px;
       color: #fff;
-      background: #f5cc35;
+      background: #e25111;
     }
 
     .w3l-whyblock .grids_info h4 {
@@ -437,7 +437,7 @@
     }
 
     .btn-confirm {
-      background-color: #f5cc35;
+      background-color: #e25111;
       color: #fff;
     }
 
@@ -509,7 +509,7 @@
                     <!--</ul>-->
                   </li>
 
-                  <li><a href="About.html">About</a></li>
+                  <li><a href="about.html">About</a></li>
 
                   <!--<li class="dropdown">-->
                   <!--  <a data-toggle="dropdown" href="#" class="dropdown-toggle">pages</a>-->
@@ -524,16 +524,16 @@
                   <li class="dropdown">
                     <a data-toggle="dropdown" href="#" class="dropdown-toggle">Menu</a>
                     <ul class="dropdown-menu">
-                      <li><a href="Veg.html">Veg</a></li>
-                      <li><a href="Non-Veg.html">Non Veg</a></li>
+                      <li><a href="veg.html">Veg</a></li>
+                      <li><a href="non-veg.html">Non Veg</a></li>
                     </ul>
                   </li>
 
 
 
-                  <li><a href="Gallery.html">Gallery</a></li>
+                  <li><a href="gallery.html">Gallery</a></li>
 
-                  <li><a href="Contact.html">Contact Us</a></li>
+                  <li><a href="contact.html">Contact Us</a></li>
 
 
                   <!--<li class="dropdown">-->
@@ -565,10 +565,10 @@
     <!-- The slideshow -->
     <div class="carousel-inner">
       <div class="item active">
-        <img loading="lazy" src="rajeshimedia/hero2.png" alt="Hero 1">
+        <img loading="lazy" src="rajeshimedia/hero6.png" alt="Hero 1">
       </div>
       <div class="item">
-        <img loading="lazy" src="rajeshimedia/hero1.png" alt="Hero 2">
+        <img loading="lazy" src="rajeshimedia/hero5.png" alt="Hero 2">
       </div>
       <!--
       <div class="item">
@@ -791,7 +791,7 @@
         </div>
         <div class="col-md-3 col-sm-6 feature text-center">
           <i class="fa fa-truck"></i>
-          <h3><a href="" style="color: #f5cc35;">Seamless Service Citywide</a></h3>
+          <h3><a href="" style="color:  #e25111;">Seamless Service Citywide</a></h3>
           <p>From the heart of the city to the outskirts, we bring our culinary excellence to your doorstep anywhere in
             Hyderabad. Our logistics ensure food arrives fresh, hot, and on time, no matter the location.</p>
         </div>
@@ -912,7 +912,7 @@
             </div>
             <div class="form-buttonhny text-center">
               <button class="btn btn-style btn-primary"
-                style="padding: 12px 35px; border-radius: 30px; font-weight: 600; border: none; background-color: #f50537; color: #fff;">Submit
+                style="padding: 12px 35px; border-radius: 30px; font-weight: 600; border: none; background-color: #e25111; color: #fff;">Submit
                 Request</button>
             </div>
           </form>
@@ -948,10 +948,10 @@
             <h3>Quick Link</h3>
             <ul class="footer-gd-16">
               <li><a href="index.html">Home</a></li>
-              <li><a href="About.html">About Us</a></li>
-              <li><a href="Veg.html">Menu</a></li>
-              <li><a href="Gallery.html">Gallery</a></li>
-              <li><a href="Contact.html">Contact Us</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="veg.html">Menu</a></li>
+              <li><a href="gallery.html">Gallery</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
 
