--- a/Contact.html
+++ b/Contact.html
@@ -7,14 +7,14 @@
         content="Contact Sree Rajesh Caterers for inquiries and bookings. Call +91 92462 41199 or visit us in Miyapur, Hyderabad. Let's make your event unforgettable.">
     <meta name="keywords"
         content="Contact Caterers Hyderabad, Catering Booking, Caterers Phone Number, Sree Rajesh Caterers Address, Miyapur Caterers">
-    <link rel="canonical" href="Contact.html">
+    <link rel="canonical" href="contact.html">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Contact Us | Sree Rajesh Caterers">
     <meta property="og:description" content="Book the best catering services in Hyderabad. Call us today!">
     <meta property="og:image" content="rajeshimedia/logo.png">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="Contact.html">
+    <meta property="og:url" content="contact.html">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,7 +25,7 @@
     <link rel="stylesheet" type="text/css" href="css/4fTQ3m0AiaJ9.css">
     <link rel="stylesheet" type="text/css" href="css/a4uDToAOB0JO.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
-    <link rel="shortcut icon" href="rajeshimedia/logo.png">
+    <link rel="shortcut icon" href="rajeshimedia/favicon.png">
     <link rel="stylesheet" href="css/style.css">
 
 
@@ -139,11 +139,11 @@
         }
 
         .footer-top-16 {
-            background-color: #f5cc35;
+            background-color: #e25111;
         }
 
         .copy-section {
-            background-color: #f5cc35;
+            background-color: #e25111;
         }
 
         .cont-top {
@@ -370,7 +370,7 @@
         }
 
         .btn-primary {
-            background-color: #f50537;
+            background-color: #e25111;
         }
 
         .btn-style {
@@ -485,19 +485,19 @@
                                         <a href="index.html">Home</a>
                                     </li>
 
-                                    <li><a href="About.html">About</a></li>
+                                    <li><a href="about.html">About</a></li>
 
                                     <li class="dropdown">
                                         <a data-toggle="dropdown" href="#" class="dropdown-toggle">Menu</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="Veg.html">Veg</a></li>
-                                            <li><a href="Non-Veg.html">Non Veg</a></li>
+                                            <li><a href="veg.html">Veg</a></li>
+                                            <li><a href="non-veg.html">Non Veg</a></li>
                                         </ul>
                                     </li>
 
-                                    <li><a href="Gallery.html">Gallery</a></li>
+                                    <li><a href="gallery.html">Gallery</a></li>
 
-                                    <li class="active"><a href="Contact.html">Contact Us</a></li>
+                                    <li class="active"><a href="contact.html">Contact Us</a></li>
 
                                 </ul>
                             </div>
@@ -628,10 +628,10 @@
                         <h3>Quick Link</h3>
                         <ul class="footer-gd-16">
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="About.html">About Us</a></li>
-                            <li><a href="Veg.html">Menu</a></li>
-                            <li><a href="Gallery.html">Gallery</a></li>
-                            <li><a href="Contact.html">Contact Us</a></li>
+                            <li><a href="about.html">About Us</a></li>
+                            <li><a href="veg.html">Menu</a></li>
+                            <li><a href="gallery.html">Gallery</a></li>
+                            <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </div>
 
