--- a/Veg.html
+++ b/Veg.html
@@ -7,14 +7,14 @@
         content="Explore our extensive Vegetarian Menu featuring South Indian, North Indian, and Chinese dishes. From Tiffin to Dinner, including Paneer, Dal, and Rice specialties.">
     <meta name="keywords"
         content="Veg Catering Menu, Vegetarian Wedding Menu, Pure Veg Catering Hyderabad, South Indian Veg Menu, North Indian Veg Catering">
-    <link rel="canonical" href="Veg.html">
+    <link rel="canonical" href="veg.html">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Veg Catering Menu | Sree Rajesh Caterers">
     <meta property="og:description" content="Authentic Vegetarian Catering. Explore our wide variety of veg dishes.">
     <meta property="og:image" content="rajeshimedia/logo.png">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="Veg.html">
+    <meta property="og:url" content="veg.html">
     <meta charset="utf-8" />
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -23,7 +23,7 @@
     <link rel="stylesheet" type="text/css" href="css/4fTQ3m0AiaJ9.css">
     <link rel="stylesheet" type="text/css" href="css/a4uDToAOB0JO.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
-    <link rel="shortcut icon" href="rajeshimedia/logo.png">
+    <link rel="shortcut icon" href="rajeshimedia/favicon.png">
     <link rel="stylesheet" href="css/style.css">
     <style>
         .logo-image {
@@ -97,7 +97,7 @@
 
         .grids_info i {
             font-size: 28px;
-            background: #f5cc35;
+            background: #e25111;
             color: #fff;
             width: 60px;
             height: 60px;
@@ -156,7 +156,7 @@
             font-size: 36px;
             font-weight: 700;
             font-family: "Playfair Display", serif;
-            color: #efbc65;
+            color: #e25111;
         }
 
         .menu .menu-item {
@@ -228,7 +228,7 @@
         }
 
         #page_header {
-            background: url(rajeshimedia/vegbrand.png) no-repeat;
+            background: url("rajeshimedia/veg-banner.jpg") no-repeat;
             width: 100%;
             position: relative;
             min-height: 315px;
@@ -237,7 +237,6 @@
             text-align: right;
         }
     </style>
-    <link href="css/veg-menu-custom.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -298,7 +297,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="About.html">
+                                        <a href="about.html">
                                             About
                                         </a>
                                     </li>
@@ -308,24 +307,24 @@
                                         </a>
                                         <ul class="dropdown-menu">
                                             <li>
-                                                <a href="Veg.html">
+                                                <a href="veg.html">
                                                     Veg
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="Non-Veg.html">
+                                                <a href="non-veg.html">
                                                     Non Veg
                                                 </a>
                                             </li>
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="Gallery.html">
+                                        <a href="gallery.html">
                                             Gallery
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="Contact.html">
+                                        <a href="contact.html">
                                             Contact Us
                                         </a>
                                     </li>
@@ -365,8 +364,8 @@
                 </p>
             </div>
             <div class="row">
-                <div class="col-lg-10 mx-auto">
-                    <p style="font-size: 18px; line-height: 2; text-align: center; color: #444;">
+                <div class="col-lg-12 mx-auto">
+                    <p style="font-size: 18px; line-height: 2; color: #444;">
                         Are you looking for a delightful culinary experience that celebrates freshness and flavor? Look
                         no
                         further than Sree Rajesh Caterers for Veg Catering Services in Miyapur, Hyderabad. Renowned for
@@ -384,6 +383,8 @@
         </div>
     </section>
     <!-- End Menu Section -->
+
+
     <section class="w3l-menu-list py-5" id="detailed-menu">
         <div class="container py-md-4 py-3">
             <div class="row">
@@ -1803,22 +1804,22 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="About.html">
+                                <a href="about.html">
                                     About Us
                                 </a>
                             </li>
                             <li>
-                                <a href="Veg.html">
+                                <a href="veg.html">
                                     Menu
                                 </a>
                             </li>
                             <li>
-                                <a href="Gallery.html">
+                                <a href="gallery.html">
                                     Gallery
                                 </a>
                             </li>
                             <li>
-                                <a href="Contact.html">
+                                <a href="contact.html">
                                     Contact Us
                                 </a>
                             </li>
