--- a/Non-Veg.html
+++ b/Non-Veg.html
@@ -271,7 +271,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h2 class="title">
-                            MENU
+                            NON VEG MENU
                         </h2>
                         <!--<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit</p>-->
                     </div>
@@ -298,7 +298,7 @@
             </div>
             <div class=" mb-5" data-aos="fade-up">
 
-                <p class="mt-4" style="font-size: 18px; color: #333; line-height: 1.6;">
+                <p class="mt-4" style="font-size: 18px;  line-height: 1.6;font-weight:500;">
                     If you are craving mouthwatering non-vegetarian dishes for your event in Miyapur, look no further
                     than Sree Rajesh Caterers for Non-Veg Catering Services in Miyapur, Hyderabad. They specialize in
                     preparing delectable dishes using the finest meats and seafood. Whether you're planning a birthday
@@ -310,6 +310,53 @@
                 </p>
             </div>
             <div class="row">
+                <div class="col-lg-3 col-md-6 col-sm-12 mb-4" data-aos="fade-up" data-aos-delay="200">
+                    <div class="bg-light rounded service-item">
+                        <div class="service-content d-flex align-items-center justify-content-center">
+                            <div class="service-content-icon text-start">
+                                <h4 class="mb-3">
+                                    Sweet Items
+                                </h4>
+
+                                <!-- List 1 -->
+                                <ul style="list-style-type:disc; font-weight:bold;">
+                                    <li>Boondi Laddu</li>
+                                    <li>Motichoor</li>
+                                    <li>Mysore Pak</li>
+                                    <li>Poornalu</li>
+                                    <li>Kova Puri</li>
+                                    <li>Bobbatlu</li>
+                                    <li>Semiya Payasam</li>
+                                    <li>Kaddu Halwa</li>
+                                    <li>Kaddu Kheer</li>
+                                    <li>Gulab Jamun</li>
+                                    <li>Kala Jamun</li>
+                                    <li>Anjeer Jamun</li>
+                                    <li>Malai Sandwich</li>
+                                    <li>Firni</li>
+                                    <li>Tawa Sweet</li>
+                                    <li>Carrot Halwa</li>
+                                    <li>Qubani ka Meetha</li>
+                                    <li>Double ka Meetha</li>
+                                    <li>Jangri</li>
+                                    <li>Kesari Jalebi</li>
+                                    <li>Paneer Jalebi</li>
+                                    <li>Jalebi with Rabdi</li>
+                                    <li>Rasmalai</li>
+                                    <li>Rasgulla</li>
+                                    <li>Basundi</li>
+                                    <li>Badusha</li>
+                                    <li>Kaju Katli</li>
+                                    <li>Fruit Salad with Custard</li>
+                                    <li>Trifle Pudding</li>
+                                    <li>Apricot Pudding</li>
+                                </ul>
+
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 mb-4" data-aos="fade-up" data-aos-delay="0">
                     <div class="bg-light rounded service-item">
                         <div class="service-content d-flex align-items-center justify-content-center">
