--- a/Veg.html
+++ b/Veg.html
@@ -343,7 +343,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h2 class="title">
-                            MENU
+                            VEG MENU
                         </h2>
                         <!--<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit</p>-->
                     </div>
@@ -388,6 +388,53 @@
     <section class="w3l-menu-list py-5" id="detailed-menu">
         <div class="container py-md-4 py-3">
             <div class="row">
+                <div class="col-lg-3 col-md-6 col-sm-12 mb-4" data-aos="fade-up" data-aos-delay="200">
+                    <div class="bg-light rounded service-item">
+                        <div class="service-content d-flex align-items-center justify-content-center">
+                            <div class="service-content-icon text-start">
+                                <h4 class="mb-3">
+                                    Sweet Items
+                                </h4>
+
+                                <!-- List 1 -->
+                                <ul style="list-style-type:disc; font-weight:bold;">
+                                    <li>Boondi Laddu</li>
+                                    <li>Motichoor</li>
+                                    <li>Mysore Pak</li>
+                                    <li>Poornalu</li>
+                                    <li>Kova Puri</li>
+                                    <li>Bobbatlu</li>
+                                    <li>Semiya Payasam</li>
+                                    <li>Kaddu Halwa</li>
+                                    <li>Kaddu Kheer</li>
+                                    <li>Gulab Jamun</li>
+                                    <li>Kala Jamun</li>
+                                    <li>Anjeer Jamun</li>
+                                    <li>Malai Sandwich</li>
+                                    <li>Firni</li>
+                                    <li>Tawa Sweet</li>
+                                    <li>Carrot Halwa</li>
+                                    <li>Qubani ka Meetha</li>
+                                    <li>Double ka Meetha</li>
+                                    <li>Jangri</li>
+                                    <li>Kesari Jalebi</li>
+                                    <li>Paneer Jalebi</li>
+                                    <li>Jalebi with Rabdi</li>
+                                    <li>Rasmalai</li>
+                                    <li>Rasgulla</li>
+                                    <li>Basundi</li>
+                                    <li>Badusha</li>
+                                    <li>Kaju Katli</li>
+                                    <li>Fruit Salad with Custard</li>
+                                    <li>Trifle Pudding</li>
+                                    <li>Apricot Pudding</li>
+                                </ul>
+
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 mb-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="bg-light rounded service-item">
                         <div class="service-content d-flex align-items-center justify-content-center">
@@ -437,6 +484,10 @@
                         </div>
                     </div>
                 </div>
+
+
+
+
                 <div class="col-lg-3 col-md-6 col-sm-12 mb-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="bg-light rounded service-item">
                         <div class="service-content d-flex align-items-center justify-content-center">
